--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-excel-export": "^0.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
