--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.3.0",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
