--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.3.0",
+    "axios": "^0.21.0",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
