--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "vercel": "vercel dev",
+    "deploy": "vercel deploy --prod",
+    "swgoh": "node ./api/"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.3.0",
+    "api-swgoh-help": "^3.3.0",
     "axios": "^0.21.0",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
@@ -33,6 +37,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vercel": "^19.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
