add MM como time

--- a/src/assets/baseData/teamsConfig.json
+++ b/src/assets/baseData/teamsConfig.json
@@ -76,19 +76,16 @@
         }
       ]
     },
-    
-    
-    
-    
-
-
-    
-
-
-
-
-
-
+    {
+      "name": "MM",
+      "lead": "MONMOTHMA",
+      "squad": [
+        "BAZEMALBUS",
+        "CHIRRUTIMWE",
+        "BIGGSDARKLIGHTER",
+        "WEDGEANTILLES"
+      ]
+    },
     {
       "name": "Nute",
       "lead": "NUTEGUNRAY",
