--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "vercel": "vercel dev",
     "deploy": "vercel deploy --prod",
-    "swgoh": "node ./api/",
-    "vercel": "vercel dev"
+    "swgoh": "node ./api/"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.3.0",
@@ -16,11 +16,11 @@
     "axios": "^0.21.0",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0.1",
+    "vue": "^2.6.11",
     "vue-excel-export": "^0.1.3",
     "vue-resource": "^1.5.1",
-    "vue-router": "^4.0.0.6",
-    "vuex": "^4.0.0.1"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -28,17 +28,17 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vercel": "^19.1.1"
+    "vercel": "^19.1.1",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -46,7 +46,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended",
       "@vue/prettier"
     ],
