--- a/src/assets/baseData/teamsConfig.json
+++ b/src/assets/baseData/teamsConfig.json
@@ -168,6 +168,16 @@
         "GREEFKARGA",
         "DENGAR"
       ]
+    },
+    {
+      "name": "GEO",
+      "lead": "GEONOSIANBROODALPHA",
+      "squad": [
+        "SUNFAC",
+        "GEONOSIANSOLDIER",
+        "GEONOSIANSPY",
+        "POGGLETHELESSER"
+      ]
     }
   ]
 }
